<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/primary_200"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/first_line_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_image_view"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/symbol_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="symbol"
                    android:textColor="@color/tertiary_100"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_image_view"
                    app:layout_constraintStart_toEndOf="@+id/icon_image_view"
                    app:layout_constraintTop_toTopOf="@+id/icon_image_view" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="name"
                    android:textColor="@color/tertiary_100"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/symbol_text_view"
                    app:layout_constraintStart_toEndOf="@+id/symbol_text_view"
                    app:layout_constraintTop_toTopOf="@+id/symbol_text_view" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/variation_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="100%"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_line_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_line_linear_layout">

                <TextView
                    android:id="@+id/invested_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="R$ 100,00"
                    android:textColor="@color/tertiary_100"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/name_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/symbol_text_view" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1.3" />

                <TextView
                    android:id="@+id/current_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:text="R$ 100,00"
                    android:textColor="@color/tertiary_100"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/profit_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="R$ 10,000"
                    android:textColor="@color/tertiary_100"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/variation_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/symbol_text_view" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_line_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_line_linear_layout"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/invested_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/invested"
                    android:textColor="@color/tertiary_100"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/current_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/current"
                    android:textColor="@color/tertiary_100"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/profit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/profit"
                    android:textColor="@color/tertiary_100"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
